--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="vyZz3vDdUOrclVwmnSajKjyqCQmRQZo5BBzyCme26xQ" />
     <link rel="icon" type="image/svg+xml" href="/Untitled design (3).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bespoke Web Engineers</title>
+    <title>Bespoke Web Engineers | Custom Websites for the solo brands & small businesses</title>
+    <meta 
+      name="description" 
+      content="Bespoke Web Engineers builds fast, modern websites for small businesses, coaches, and service providers to grow their brand online." 
+    />
   </head>
   <body>
     <div id="root"></div>
